# step2stl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindOpenCASCADE.cmake
